@@ -54,7 +54,7 @@
     <Content Include="Resources\MoreRes\file2.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Castle.Core\Castle.Core.csproj">
+    <ProjectReference Include="..\Castle.Core\Castle.Core-vs2005.csproj">
       <Project>{E4FA5B53-7D36-429E-8E5C-53D5479242BA}</Project>
       <Name>Castle.Core</Name>
     </ProjectReference>
