@@ -89,6 +89,11 @@
         <Files>
             <Include>
                 <File
+                    RelPath = "IServiceEnabledComponent.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Attributes\CastleComponent.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
