@@ -1,16 +1,16 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 9.00
 # Visual Studio 2005
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Core", "Castle.Core\Castle.Core.csproj", "{E4FA5B53-7D36-429E-8E5C-53D5479242BA}"
-EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Core.Tests", "Castle.Core.Tests\Castle.Core.Tests.csproj", "{087AD3BF-5E40-450D-8138-FBB5F57AC474}"
-EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{8C53C104-3557-4C1A-B653-C4E6C46DB48E}"
 	ProjectSection(SolutionItems) = preProject
 		Changes.txt = Changes.txt
 		core.build = core.build
 		License.txt = License.txt
 	EndProjectSection
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Core-vs2005", "Castle.Core\Castle.Core-vs2005.csproj", "{E4FA5B53-7D36-429E-8E5C-53D5479242BA}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Core.Tests-vs2005", "Castle.Core.Tests\Castle.Core.Tests-vs2005.csproj", "{087AD3BF-5E40-450D-8138-FBB5F57AC474}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
